--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-typescript-webpack",
+  "name": "custom-radio-button",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
